@@ -9,6 +9,7 @@ pirogue-flow-inspector (1.0.1) UNRELEASED; urgency=medium
      - python3-geoip2 (>= 4.5.0).
   * Delete python3-pip from dependencies accordingly.
   * Fix missing dependency on python3-systemd.
+  * Enable the python3 dh add-on to get appropriate Python dependencies.
 
  -- Cyril Brulebois <cyril@debamax.com>  Tue, 26 Apr 2022 21:59:47 +0200
 
